# hackaton

./: README.md  ROADMAP.md
.github/workflows/: cli.yml
FInal_ver/: CivicLens - Podzial Pracy i Moduly.docx
M1/infra/: docker-compose.yml
M1/services/data-service/: Dockerfile  alembic.ini  pyproject.toml
M1/services/data-service/alembic/: env.py
M1/services/data-service/alembic/versions/: 20260418_0001_baseline.py  20260418_0002_legal_acts_articles.py  20260418_0003_news_items.py  20260418_0004_patents.py
M1/services/data-service/app/: article_parser.py  backfill_articles.py  clients_sejm_eli.py  config.py  db.py  error_handlers.py  import_rss.py  import_sejm_eli.py  main.py  models.py  request_id.py  schemas.py  search_utils.py  seed_demo.py  seed_patents_demo.py  text_utils.py
M1/services/data-service/app/routers/: admin.py  articles.py  health.py  legal_acts.py  patents.py  trends.py
M1/services/data-service/versions/: 20260418_0001_baseline.py
M2/: CLAUDE.md
M2/services/ai-service/: .env  docker-compose.override.yml  pyproject.toml
Test_Arek/hackaton-main/: .gitignore
Test_Arek/hackaton-main/infra/: docker-compose.yml
contracts/: gateway.yaml
infra/: docker-compose.yml
services/ai-service/: .dockerignore  pyproject.toml
services/ai-service/app/: config.py  metrics.py
services/ai-service/app/api/: analyze.py  health.py  summarize.py
services/ai-service/app/clients/: data_service.py
services/ai-service/app/guardrails/: injection.py
services/ai-service/app/llm/: models.py  openrouter.py
services/ai-service/app/prompts/: patent_check.j2  qa.j2  summarize.j2
services/ai-service/scripts/: demo.sh
services/ai-service/tests/: test_comprehensive.py  test_fallback.py  test_live_llm.py  test_llm_client.py
services/data-service/alembic/: env.py
services/data-service/app/: article_parser.py  text_utils.py
services/data-service/versions/: 20260418_0001_baseline.py
services/gateway-service/: Dockerfile  fly.toml  requirements.txt
services/gateway-service/app/: main.py
(+65 files in other folders)
